--- a/my2wbnew_description/params/global_costmap_params.yaml
+++ b/my2wbnew_description/params/global_costmap_params.yaml
@@ -1,9 +1,9 @@
 global_costmap:
-  global_frame: map
-  robot_base_frame: base_link
+  global_frame: odom
+  robot_base_frame: base_footprint
 
-  update_frequency: 5.0 # 10.0
-  publish_frequency: 2.0 # 10.0
+  update_frequency: 2.0 # 10.0
+  publish_frequency: 1.0 # 10.0
   transform_tolerance: 0.5
 
 # new params
