--- a/my2wbnew_description/params/global_costmap_params.yaml
+++ b/my2wbnew_description/params/global_costmap_params.yaml
@@ -1,9 +1,9 @@
 global_costmap:
-  global_frame: odom
+  global_frame: map
   robot_base_frame: base_footprint
 
-  update_frequency: 2.0 # 10.0
-  publish_frequency: 1.0 # 10.0
+  update_frequency: 5.0 # 10.0
+  publish_frequency: 5.0 # 10.0
   transform_tolerance: 0.5
 
 # new params
@@ -11,9 +11,9 @@ global_costmap:
   neutral_cost : 66
   lethal_cost : 253
 
-  # map_type: costmap
-  # static_map: false # true
-  plugins:
-    - {name: static_layer,         type: "costmap_2d::StaticLayer"}
-    - {name: obstacles_layer,      type: "costmap_2d::VoxelLayer"}
-    - {name: inflation_layer,      type: "costmap_2d::InflationLayer"}
+  map_type: costmap
+  static_map: true
+  # plugins:
+  #   - {name: static_layer,         type: "costmap_2d::StaticLayer"}
+  #   - {name: obstacles_layer,      type: "costmap_2d::VoxelLayer"}
+  #   - {name: inflation_layer,      type: "costmap_2d::InflationLayer"}
